# message_sender

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile.cross  README.md  data.ron  whatsapp_data.db-shm  whatsapp_data.db-wal
.cargo/: config.toml
sqlite-storage/: Cargo.toml
src/: accept_server.rs  app_state.rs  appdata.rs  async_actions.rs  helpers.rs  main.rs  message.rs  message_server.rs  observable.rs  send_categories.rs  signal.rs  signal_actions.rs  test.rs  ui.rs
src/message/: compose.pest  compose.rs  deserialize.rs  format.pest  format.rs  mod.rs
src/messangers/: mod.rs  signal.rs  whatsapp.rs
src/send_categories/: deserialize.rs
src/ui/: category_screen.rs  ext.rs  formatting_screen.rs  icons.rs  main_screen.rs  message_history.rs  mod.rs  settings_screen.rs  side_menu.rs  theme.rs
ui/: main.slint  main_screen.slint  settings_screen.slint
