[package]
name = "modern-sender"
version = "0.1.0"
edition = "2024"
license = "GPLv3"

[dependencies]
futures = "0.3.31"
image = "0.25.8"
qrcode = {version = "0.14.1", features = ["image"]}
presage = { git = "https://github.com/whisperfish/presage" }
presage-store-sqlite = { git = "https://github.com/whisperfish/presage" }
simplelog = "0.12.2"
log = "0.4.28"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
anyhow = "1.0.100"
axum = "0.8.7"
derive_more = { version = "2.0.1", features = ["display"] }
unicode-segmentation = "1.12.0"
pest = "2.8.4"
pest_derive = "2.8.4"

[dependencies.slint]
version = "1.14.1"
default-features = false
features = [
    "std",
    "compat-1-2",
    "accessibility",
    "backend-default",
    "renderer-skia",
    "serde"
]

[dependencies.tokio]
version = "1.48.0"
features = [
    "rt",
    "net",
    "io-std",
    "time",
    "sync"
]

[build-dependencies]
slint-build = "1.14.1"

[dev-dependencies]
reqwest = {version = "0.12", features = ["blocking"]}

# [features]
# skia = ["slint/renderer-skia"]

[patch.crates-io]
curve25519-dalek = { git = 'https://github.com/signalapp/curve25519-dalek', tag = 'signal-curve25519-4.1.3' }
