[package]
name = "modern-sender"
version = "0.3.0"
edition = "2024"
license = "GPLv3"
exclude = ["sqlite-storage"]

[dependencies]
futures = "0.3.31"
image = "0.25.8"
presage = { git = "https://github.com/whisperfish/presage" }
presage-store-sqlite = { git = "https://github.com/whisperfish/presage" }
simplelog = "0.12.2"
log = "0.4.28"
serde = {version = "1.0.228", features = ["derive"]}
anyhow = "1.0.100"
axum = "0.8.7"
derive_more = { version = "2.1.1", features = ["display", "from"] }
unicode-segmentation = "1.12.0"
pest = "2.8.4"
pest_derive = "2.8.4"
url = "2.5.7"
dark-light = "2.0.0"
ron = "0.12.0"
serde_json = "1.0.145"
whatsapp-rust = {git = "https://github.com/jlucaso1/whatsapp-rust.git", default-features = false}
whatsapp-rust-sqlite-storage = { path = "sqlite-storage" }
whatsapp-rust-tokio-transport = {git = "https://github.com/jlucaso1/whatsapp-rust.git"}
whatsapp-rust-ureq-http-client = {git = "https://github.com/jlucaso1/whatsapp-rust.git"}
waproto = {git = "https://github.com/jlucaso1/whatsapp-rust.git"}
wacore-binary = {git = "https://github.com/jlucaso1/whatsapp-rust.git"}

[dependencies.iced]
version = "0.14"
features = [
    "tokio",
    "qr_code",
    "svg",
]

[dependencies.tokio]
version = "1.48.0"
features = [
    "rt",
    "net",
    "io-std",
    "time",
    "sync"
]

[dev-dependencies]
reqwest = {version = "0.12", features = ["blocking"]}

[features]
hot = ["iced/hot"]

[patch.crates-io]
curve25519-dalek = { git = 'https://github.com/signalapp/curve25519-dalek', tag = 'signal-curve25519-4.1.3' }

[lints.clippy]
result-large-err = "allow"
enum-variant-names = "allow"
