cargo-features = ["codegen-backend"]
[package]
name = "modern-sender"
version = "1.0.0"
edition = "2024"
license = "GPLv3"
exclude = ["sqlite-storage"]

[dependencies]
futures = "0.3.31"
image = "0.25.8"
simplelog = "0.12.2"
presage = { git = "https://github.com/whisperfish/presage", rev = "fe3ed54c4844ae51c3a9fa49cf80a7816a31a425" }
presage-store-sqlite = { git = "https://github.com/whisperfish/presage", rev = "fe3ed54c4844ae51c3a9fa49cf80a7816a31a425" }
log = "0.4.28"
anyhow = "1.0.100"
axum = "0.8.7"
derive_more = { version = "2.1.1", features = ["display", "from"] }
unicode-segmentation = "1.12.0"
pest = "2.8.4"
pest_derive = "2.8.4"
url = "2.5.7"
ron = "0.12.0"
serde_json = "1.0.145"
whatsapp-rust = {git = "https://github.com/jlucaso1/whatsapp-rust.git", default-features = false, features = ["tokio-transport", "ureq-client", "sqlite-storage"] }
waproto = {git = "https://github.com/jlucaso1/whatsapp-rust.git"}
wacore-binary = {git = "https://github.com/jlucaso1/whatsapp-rust.git"}
rfd = "0.17.1"
tracing-subscriber = "0.3.22"
tracing = "0.1.44"
serde-versioning = { git = "https://github.com/vic1707/serde-versioning.git" }
serde = "1.0.228"

[dependencies.iced]
version = "0.14"
features = [
    "tokio",
    "qr_code",
    "svg",
    "highlighter",
]

[dependencies.tokio]
version = "1.48.0"
features = [
    "rt",
    "net",
    "io-std",
    "time",
    "sync"
]

[dev-dependencies]
reqwest = {version = "0.12", features = ["blocking"]}

[features]
hot = ["iced/hot"]

[patch.crates-io]
curve25519-dalek = { git = 'https://github.com/signalapp/curve25519-dalek', tag = 'signal-curve25519-4.1.3' }
libsqlite3-sys = { version = "0.36.0", git = "https://github.com/whisperfish/rusqlite", rev = '2a42b3354c9194700d08aa070f70a131a470e7dc' }
diesel = { git = "https://github.com/diesel-rs/diesel.git", rev = "5287465eed44891f04823beee8528e82788e6ddd"}

[lints.clippy]
result-large-err = "allow"
enum-variant-names = "allow"

[profile.dev]
opt-level = 0
debug = 0
strip = "none"
lto = false
codegen-units = 256
incremental = true
codegen-backend = "cranelift"

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"
